--- a/public/index.html
+++ b/public/index.html
@@ -11,6 +11,19 @@
     />
     <link rel="apple-touch-icon" href="logo192.png" />
     <!--
+         Tangerine font is for the company brand name.
+       -->
+    <link
+         href="https://fonts.googleapis.com/css?family=Tangerine&display=swap"
+         rel="stylesheet"
+       />
+       <link
+      rel="stylesheet"
+      href="https://use.fontawesome.com/releases/v5.6.3/css/all.css"
+      integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/"
+      crossorigin="anonymous"
+    />
+    <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
     -->
